fix: delete the collapsed feature form menu

--- a/stories/Sidebar/style.css
+++ b/stories/Sidebar/style.css
@@ -1,7 +1,3 @@
 .background {
   background-color: #eeeeee;
 }
-
-.sublinksContainer nav {
-  margin-top: 72px;
-}
